# eotransform-pandas

./: .gitignore  Makefile  README.md  data.json  requirements.dev.txt  requirements.geopath.txt  requirements.prod.txt  requirements.test.txt  setup.cfg
.github/workflows/: publish.yml  test_platforms.yml
htmlcov/: class_index.html  d_0cee691c97d1195f_geopathfinder_conventions_py.html  d_0f435bea4effab97___init___py.html  d_0f435bea4effab97__version_py.html  d_21e4e8e4f92def79_gather_py.html  d_8ca5898191c0a35e_group_by_n_py.html  function_index.html  index.html  status.json  z_0cee691c97d1195f_geopathfinder_conventions_py.html  z_0f435bea4effab97___init___py.html  z_0f435bea4effab97__version_py.html  z_21e4e8e4f92def79_gather_py.html  z_8ca5898191c0a35e_group_by_n_py.html
src/eotransform_pandas/filesystem/: gather.py
tests/: test_filesystem_gather_files.py  test_meta.py
tests/helpers/: assertions.py  factories.py
