[metadata]
name = eotransform-pandas
version = attr: eotransform_pandas.__version__
description = Implements transformations on pandas DataFrame, to be used with eotransform streamed_process.
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
url = https://git.eodc.eu/tuwien/eotransform-pandas
platforms = any

[options]
package_dir =
    = src
packages = find:
install_requires =
    eotransform>=1.1
    pandas

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    geopathfinder
geopath = geopathfinder
